parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     statements -> statements statement
Rule 3     statements -> statement
Rule 4     statement -> empty NEWLINE
Rule 5     statement -> declaration NEWLINE
Rule 6     statement -> assignment NEWLINE
Rule 7     statement -> convert NEWLINE
Rule 8     statement -> digitize NEWLINE
Rule 9     statement -> while NEWLINE
Rule 10    statement -> until NEWLINE
Rule 11    statement -> if NEWLINE
Rule 12    statement -> command NEWLINE
Rule 13    statement -> function NEWLINE
Rule 14    statement -> function_call NEWLINE
Rule 15    empty -> <empty>
Rule 16    declaration -> VARIANT variant
Rule 17    declaration -> VARIANT variant ASSIGNMENT initialization
Rule 18    variant -> NAME
Rule 19    variant -> NAME varsize
Rule 20    variant -> PARAM
Rule 21    variant -> PARAM varsize
Rule 22    varsize -> OSQBRACKET decimal_expression CSQBRACKET
Rule 23    varsize -> OSQBRACKET decimal_expression COMMA decimal_expression CSQBRACKET
Rule 24    varsize -> OSQBRACKET CSQBRACKET
Rule 25    initialization -> OFBRACKET init_lists CFBRACKET
Rule 26    init_lists -> init_lists init_list
Rule 27    init_lists -> init_list
Rule 28    init_list -> OFBRACKET inits CFBRACKET
Rule 29    init_list -> OFBRACKET CFBRACKET
Rule 30    inits -> inits init
Rule 31    inits -> init
Rule 32    init -> const_expressions COMMA const_expression SEMICOLON
Rule 33    init -> const_expression SEMICOLON
Rule 34    const_expressions -> const_expressions COMMA const_expression
Rule 35    const_expressions -> const_expression
Rule 36    const_expression -> const_math_expression
Rule 37    const_expression -> const
Rule 38    expression -> math_expression
Rule 39    expression -> const
Rule 40    expression -> variant
Rule 41    expression -> function_call
Rule 42    expression -> command
Rule 43    decimal_expression -> dec_math_expression
Rule 44    decimal_expression -> decimal_const
Rule 45    decimal_expression -> variant
Rule 46    decimal_expression -> function_call
Rule 47    bool_expression -> bool_math_expression
Rule 48    bool_expression -> bool_const
Rule 49    bool_expression -> variant
Rule 50    bool_expression -> function_call
Rule 51    string_expression -> string_math_expression
Rule 52    string_expression -> string_const
Rule 53    string_expression -> variant
Rule 54    string_expression -> function_call
Rule 55    math_expression -> expression PLUS expression
Rule 56    math_expression -> MINUS expression
Rule 57    const_math_expression -> const_expression PLUS const_expression
Rule 58    const_math_expression -> MINUS const_expression
Rule 59    dec_math_expression -> decimal_expression PLUS decimal_expression
Rule 60    dec_math_expression -> MINUS decimal_expression
Rule 61    bool_math_expression -> bool_expression PLUS bool_expression
Rule 62    bool_math_expression -> MINUS bool_expression
Rule 63    string_math_expression -> string_expression PLUS string_expression
Rule 64    string_math_expression -> MINUS string_expression
Rule 65    const -> bool_const
Rule 66    const -> decimal_const
Rule 67    const -> string_const
Rule 68    decimal_const -> DECIMAL
Rule 69    bool_const -> TRUE
Rule 70    bool_const -> FALSE
Rule 71    string_const -> LETTERS
Rule 72    assignment -> variant ASSIGNMENT expression
Rule 73    convert -> CONVERT type TO type variant
Rule 74    digitize -> DIGITIZE type variant
Rule 75    type -> BOOL
Rule 76    type -> DIGIT
Rule 77    type -> STRING
Rule 78    while -> WHILE bool_expression NEWLINE statements ENDW
Rule 79    while -> WHILE bool_expression NEWLINE func_body_statements ENDW
Rule 80    until -> UNTIL bool_expression NEWLINE statements ENDU
Rule 81    until -> UNTIL bool_expression NEWLINE func_body_statements ENDU
Rule 82    if -> IFLESS decimal_expression COMMA decimal_expression NEWLINE statements ENDIF
Rule 83    if -> IFNLESS decimal_expression COMMA decimal_expression NEWLINE statements ENDIF
Rule 84    if -> IFZERO decimal_expression NEWLINE statements ENDIF
Rule 85    if -> IFNZERO decimal_expression NEWLINE statements ENDIF
Rule 86    if -> IFHIGH decimal_expression COMMA decimal_expression NEWLINE statements ENDIF
Rule 87    if -> IFNHIGH decimal_expression COMMA decimal_expression NEWLINE statements ENDIF
Rule 88    if -> IFEQUAL string_expression COMMA string_expression NEWLINE statements ENDIF
Rule 89    if -> IFLESS decimal_expression COMMA decimal_expression NEWLINE func_body_statements ENDIF
Rule 90    if -> IFNLESS decimal_expression COMMA decimal_expression NEWLINE func_body_statements ENDIF
Rule 91    if -> IFZERO decimal_expression NEWLINE func_body_statements ENDIF
Rule 92    if -> IFNZERO decimal_expression NEWLINE func_body_statements ENDIF
Rule 93    if -> IFHIGH decimal_expression COMMA decimal_expression NEWLINE func_body_statements ENDIF
Rule 94    if -> IFNHIGH decimal_expression COMMA decimal_expression NEWLINE func_body_statements ENDIF
Rule 95    if -> IFEQUAL string_expression COMMA string_expression NEWLINE func_body_statements ENDIF
Rule 96    command -> COMMAND string_expression
Rule 97    func_body_statements -> func_body_statements func_body_statement
Rule 98    func_body_statements -> func_body_statement
Rule 99    func_body_statement -> empty NEWLINE
Rule 100   func_body_statement -> declaration NEWLINE
Rule 101   func_body_statement -> assignment NEWLINE
Rule 102   func_body_statement -> convert NEWLINE
Rule 103   func_body_statement -> digitize NEWLINE
Rule 104   func_body_statement -> while NEWLINE
Rule 105   func_body_statement -> until NEWLINE
Rule 106   func_body_statement -> if NEWLINE
Rule 107   func_body_statement -> command NEWLINE
Rule 108   func_body_statement -> function_call NEWLINE
Rule 109   func_body_statement -> return NEWLINE
Rule 110   function -> FUNC NAME NEWLINE func_body_statements ENDFUNC
Rule 111   function_call -> CALL NAME expression
Rule 112   function_call -> CALL NAME
Rule 113   return -> RETURN expression
Rule 114   declaration -> VARIANT error
Rule 115   declaration -> VARIANT variant ASSIGNMENT error
Rule 116   declaration -> declaration error
Rule 117   varsize -> OSQBRACKET error CSQBRACKET
Rule 118   varsize -> OSQBRACKET error COMMA decimal_expression CSQBRACKET
Rule 119   varsize -> OSQBRACKET decimal_expression COMMA error CSQBRACKET
Rule 120   varsize -> OSQBRACKET error COMMA error CSQBRACKET
Rule 121   varsize -> varsize error
Rule 122   assignment -> variant ASSIGNMENT error
Rule 123   assignment -> error ASSIGNMENT expression
Rule 124   convert -> CONVERT type TO type error
Rule 125   convert -> CONVERT type TO error
Rule 126   convert -> CONVERT type error
Rule 127   convert -> CONVERT error
Rule 128   convert -> convert error
Rule 129   digitize -> DIGITIZE error
Rule 130   digitize -> digitize error
Rule 131   command -> COMMAND error
Rule 132   command -> command error
Rule 133   while -> WHILE error NEWLINE statements ENDW
Rule 134   while -> WHILE bool_expression NEWLINE statements error
Rule 135   while -> WHILE bool_expression statements ENDW
Rule 136   while -> WHILE error NEWLINE func_body_statements ENDW
Rule 137   while -> WHILE bool_expression NEWLINE func_body_statements error
Rule 138   while -> WHILE bool_expression func_body_statements ENDW
Rule 139   while -> while error
Rule 140   until -> UNTIL error NEWLINE statements ENDU
Rule 141   until -> UNTIL bool_expression NEWLINE statements error
Rule 142   until -> UNTIL bool_expression statements ENDU
Rule 143   until -> UNTIL error NEWLINE func_body_statements ENDU
Rule 144   until -> UNTIL bool_expression NEWLINE func_body_statements error
Rule 145   until -> UNTIL bool_expression func_body_statements ENDU
Rule 146   until -> until error
Rule 147   if -> IFLESS error NEWLINE statements ENDIF
Rule 148   if -> IFNLESS error NEWLINE statements ENDIF
Rule 149   if -> IFZERO error NEWLINE statements ENDIF
Rule 150   if -> IFNZERO error NEWLINE statements ENDIF
Rule 151   if -> IFHIGH error NEWLINE statements ENDIF
Rule 152   if -> IFNHIGH error NEWLINE statements ENDIF
Rule 153   if -> IFEQUAL error NEWLINE statements ENDIF
Rule 154   if -> IFLESS decimal_expression COMMA decimal_expression NEWLINE statements error
Rule 155   if -> IFNLESS decimal_expression COMMA decimal_expression NEWLINE statements error
Rule 156   if -> IFZERO decimal_expression NEWLINE statements error
Rule 157   if -> IFNZERO decimal_expression NEWLINE statements error
Rule 158   if -> IFHIGH decimal_expression COMMA decimal_expression NEWLINE statements error
Rule 159   if -> IFNHIGH decimal_expression COMMA decimal_expression NEWLINE statements error
Rule 160   if -> IFEQUAL string_expression COMMA string_expression NEWLINE statements error
Rule 161   if -> IFLESS decimal_expression COMMA decimal_expression statements ENDIF
Rule 162   if -> IFNLESS decimal_expression COMMA decimal_expression statements ENDIF
Rule 163   if -> IFZERO decimal_expression statements ENDIF
Rule 164   if -> IFNZERO decimal_expression statements ENDIF
Rule 165   if -> IFHIGH decimal_expression COMMA decimal_expression statements ENDIF
Rule 166   if -> IFNHIGH decimal_expression COMMA decimal_expression statements ENDIF
Rule 167   if -> IFEQUAL string_expression COMMA string_expression statements ENDIF
Rule 168   if -> if error
Rule 169   function -> FUNC error NEWLINE func_body_statements ENDFUNC
Rule 170   function -> FUNC NAME NEWLINE func_body_statements error
Rule 171   function -> FUNC error NEWLINE func_body_statements error
Rule 172   function -> function error
Rule 173   return -> RETURN error
Rule 174   return -> return error

Terminals, with rules where they appear

ASSIGNMENT           : 17 72 115 122 123
BOOL                 : 75
CALL                 : 111 112
CFBRACKET            : 25 28 29
COMMA                : 23 32 34 82 83 86 87 88 89 90 93 94 95 118 119 120 154 155 158 159 160 161 162 165 166 167
COMMAND              : 96 131
CONVERT              : 73 124 125 126 127
CSQBRACKET           : 22 23 24 117 118 119 120
DECIMAL              : 68
DIGIT                : 76
DIGITIZE             : 74 129
ENDFUNC              : 110 169
ENDIF                : 82 83 84 85 86 87 88 89 90 91 92 93 94 95 147 148 149 150 151 152 153 161 162 163 164 165 166 167
ENDU                 : 80 81 140 142 143 145
ENDW                 : 78 79 133 135 136 138
FALSE                : 70
FUNC                 : 110 169 170 171
IFEQUAL              : 88 95 153 160 167
IFHIGH               : 86 93 151 158 165
IFLESS               : 82 89 147 154 161
IFNHIGH              : 87 94 152 159 166
IFNLESS              : 83 90 148 155 162
IFNZERO              : 85 92 150 157 164
IFZERO               : 84 91 149 156 163
LETTERS              : 71
MINUS                : 56 58 60 62 64
NAME                 : 18 19 110 111 112 170
NEWLINE              : 4 5 6 7 8 9 10 11 12 13 14 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 99 100 101 102 103 104 105 106 107 108 109 110 133 134 136 137 140 141 143 144 147 148 149 150 151 152 153 154 155 156 157 158 159 160 169 170 171
OFBRACKET            : 25 28 29
OSQBRACKET           : 22 23 24 117 118 119 120
PARAM                : 20 21
PLUS                 : 55 57 59 61 63
RETURN               : 113 173
SEMICOLON            : 32 33
STRING               : 77
TO                   : 73 124 125
TRUE                 : 69
UNTIL                : 80 81 140 141 142 143 144 145
VARIANT              : 16 17 114 115
WHILE                : 78 79 133 134 135 136 137 138
error                : 114 115 116 117 118 119 120 120 121 122 123 124 125 126 127 128 129 130 131 132 133 134 136 137 139 140 141 143 144 146 147 148 149 150 151 152 153 154 155 156 157 158 159 160 168 169 170 171 171 172 173 174

Nonterminals, with rules where they appear

assignment           : 6 101
bool_const           : 48 65
bool_expression      : 61 61 62 78 79 80 81 134 135 137 138 141 142 144 145
bool_math_expression : 47
command              : 12 42 107 132
const                : 37 39
const_expression     : 32 33 34 35 57 57 58
const_expressions    : 32 34
const_math_expression : 36
convert              : 7 102 128
dec_math_expression  : 43
decimal_const        : 44 66
decimal_expression   : 22 23 23 59 59 60 82 82 83 83 84 85 86 86 87 87 89 89 90 90 91 92 93 93 94 94 118 119 154 154 155 155 156 157 158 158 159 159 161 161 162 162 163 164 165 165 166 166
declaration          : 5 100 116
digitize             : 8 103 130
empty                : 4 99
expression           : 55 55 56 72 111 113 123
func_body_statement  : 97 98
func_body_statements : 79 81 89 90 91 92 93 94 95 97 110 136 137 138 143 144 145 169 170 171
function             : 13 172
function_call        : 14 41 46 50 54 108
if                   : 11 106 168
init                 : 30 31
init_list            : 26 27
init_lists           : 25 26
initialization       : 17
inits                : 28 30
math_expression      : 38
program              : 0
return               : 109 174
statement            : 2 3
statements           : 1 2 78 80 82 83 84 85 86 87 88 133 134 135 140 141 142 147 148 149 150 151 152 153 154 155 156 157 158 159 160 161 162 163 164 165 166 167
string_const         : 52 67
string_expression    : 63 63 64 88 88 95 95 96 160 160 167 167
string_math_expression : 51
type                 : 73 73 74 124 124 125 126
until                : 10 105 146
variant              : 16 17 40 45 49 53 72 73 74 115 122
varsize              : 19 21 121
while                : 9 104 139

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (2) statements -> . statements statement
    (3) statements -> . statement
    (4) statement -> . empty NEWLINE
    (5) statement -> . declaration NEWLINE
    (6) statement -> . assignment NEWLINE
    (7) statement -> . convert NEWLINE
    (8) statement -> . digitize NEWLINE
    (9) statement -> . while NEWLINE
    (10) statement -> . until NEWLINE
    (11) statement -> . if NEWLINE
    (12) statement -> . command NEWLINE
    (13) statement -> . function NEWLINE
    (14) statement -> . function_call NEWLINE
    (15) empty -> .
    (16) declaration -> . VARIANT variant
    (17) declaration -> . VARIANT variant ASSIGNMENT initialization
    (114) declaration -> . VARIANT error
    (115) declaration -> . VARIANT variant ASSIGNMENT error
    (116) declaration -> . declaration error
    (72) assignment -> . variant ASSIGNMENT expression
    (122) assignment -> . variant ASSIGNMENT error
    (123) assignment -> . error ASSIGNMENT expression
    (73) convert -> . CONVERT type TO type variant
    (124) convert -> . CONVERT type TO type error
    (125) convert -> . CONVERT type TO error
    (126) convert -> . CONVERT type error
    (127) convert -> . CONVERT error
    (128) convert -> . convert error
    (74) digitize -> . DIGITIZE type variant
    (129) digitize -> . DIGITIZE error
    (130) digitize -> . digitize error
    (78) while -> . WHILE bool_expression NEWLINE statements ENDW
    (79) while -> . WHILE bool_expression NEWLINE func_body_statements ENDW
    (133) while -> . WHILE error NEWLINE statements ENDW
    (134) while -> . WHILE bool_expression NEWLINE statements error
    (135) while -> . WHILE bool_expression statements ENDW
    (136) while -> . WHILE error NEWLINE func_body_statements ENDW
    (137) while -> . WHILE bool_expression NEWLINE func_body_statements error
    (138) while -> . WHILE bool_expression func_body_statements ENDW
    (139) while -> . while error
    (80) until -> . UNTIL bool_expression NEWLINE statements ENDU
    (81) until -> . UNTIL bool_expression NEWLINE func_body_statements ENDU
    (140) until -> . UNTIL error NEWLINE statements ENDU
    (141) until -> . UNTIL bool_expression NEWLINE statements error
    (142) until -> . UNTIL bool_expression statements ENDU
    (143) until -> . UNTIL error NEWLINE func_body_statements ENDU
    (144) until -> . UNTIL bool_expression NEWLINE func_body_statements error
    (145) until -> . UNTIL bool_expression func_body_statements ENDU
    (146) until -> . until error
    (82) if -> . IFLESS decimal_expression COMMA decimal_expression NEWLINE statements ENDIF
    (83) if -> . IFNLESS decimal_expression COMMA decimal_expression NEWLINE statements ENDIF
    (84) if -> . IFZERO decimal_expression NEWLINE statements ENDIF
    (85) if -> . IFNZERO decimal_expression NEWLINE statements ENDIF
    (86) if -> . IFHIGH decimal_expression COMMA decimal_expression NEWLINE statements ENDIF
    (87) if -> . IFNHIGH decimal_expression COMMA decimal_expression NEWLINE statements ENDIF
    (88) if -> . IFEQUAL string_expression COMMA string_expression NEWLINE statements ENDIF
    (89) if -> . IFLESS decimal_expression COMMA decimal_expression NEWLINE func_body_statements ENDIF
    (90) if -> . IFNLESS decimal_expression COMMA decimal_expression NEWLINE func_body_statements ENDIF
    (91) if -> . IFZERO decimal_expression NEWLINE func_body_statements ENDIF
    (92) if -> . IFNZERO decimal_expression NEWLINE func_body_statements ENDIF
    (93) if -> . IFHIGH decimal_expression COMMA decimal_expression NEWLINE func_body_statements ENDIF
    (94) if -> . IFNHIGH decimal_expression COMMA decimal_expression NEWLINE func_body_statements ENDIF
    (95) if -> . IFEQUAL string_expression COMMA string_expression NEWLINE func_body_statements ENDIF
    (147) if -> . IFLESS error NEWLINE statements ENDIF
    (148) if -> . IFNLESS error NEWLINE statements ENDIF
    (149) if -> . IFZERO error NEWLINE statements ENDIF
    (150) if -> . IFNZERO error NEWLINE statements ENDIF
    (151) if -> . IFHIGH error NEWLINE statements ENDIF
    (152) if -> . IFNHIGH error NEWLINE statements ENDIF
    (153) if -> . IFEQUAL error NEWLINE statements ENDIF
    (154) if -> . IFLESS decimal_expression COMMA decimal_expression NEWLINE statements error
    (155) if -> . IFNLESS decimal_expression COMMA decimal_expression NEWLINE statements error
    (156) if -> . IFZERO decimal_expression NEWLINE statements error
    (157) if -> . IFNZERO decimal_expression NEWLINE statements error
    (158) if -> . IFHIGH decimal_expression COMMA decimal_expression NEWLINE statements error
    (159) if -> . IFNHIGH decimal_expression COMMA decimal_expression NEWLINE statements error
    (160) if -> . IFEQUAL string_expression COMMA string_expression NEWLINE statements error
    (161) if -> . IFLESS decimal_expression COMMA decimal_expression statements ENDIF
    (162) if -> . IFNLESS decimal_expression COMMA decimal_expression statements ENDIF
    (163) if -> . IFZERO decimal_expression statements ENDIF
    (164) if -> . IFNZERO decimal_expression statements ENDIF
    (165) if -> . IFHIGH decimal_expression COMMA decimal_expression statements ENDIF
    (166) if -> . IFNHIGH decimal_expression COMMA decimal_expression statements ENDIF
    (167) if -> . IFEQUAL string_expression COMMA string_expression statements ENDIF
    (168) if -> . if error
    (96) command -> . COMMAND string_expression
    (131) command -> . COMMAND error
    (132) command -> . command error
    (110) function -> . FUNC NAME NEWLINE func_body_statements ENDFUNC
    (169) function -> . FUNC error NEWLINE func_body_statements ENDFUNC
    (170) function -> . FUNC NAME NEWLINE func_body_statements error
    (171) function -> . FUNC error NEWLINE func_body_statements error
    (172) function -> . function error
    (111) function_call -> . CALL NAME expression
    (112) function_call -> . CALL NAME
    (18) variant -> . NAME
    (19) variant -> . NAME varsize
    (20) variant -> . PARAM
    (21) variant -> . PARAM varsize

    NEWLINE         reduce using rule 15 (empty -> .)
    VARIANT         shift and go to state 15
    error           shift and go to state 17
    CONVERT         shift and go to state 18
    DIGITIZE        shift and go to state 19
    WHILE           shift and go to state 20
    UNTIL           shift and go to state 21
    IFLESS          shift and go to state 22
    IFNLESS         shift and go to state 23
    IFZERO          shift and go to state 24
    IFNZERO         shift and go to state 25
    IFHIGH          shift and go to state 26
    IFNHIGH         shift and go to state 27
    IFEQUAL         shift and go to state 28
    COMMAND         shift and go to state 29
    FUNC            shift and go to state 30
    CALL            shift and go to state 32
    NAME            shift and go to state 31
    PARAM           shift and go to state 33

    program                        shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 3
    empty                          shift and go to state 4
    declaration                    shift and go to state 5
    assignment                     shift and go to state 6
    convert                        shift and go to state 7
    digitize                       shift and go to state 8
    while                          shift and go to state 9
    until                          shift and go to state 10
    if                             shift and go to state 11
    command                        shift and go to state 12
    function                       shift and go to state 13
    function_call                  shift and go to state 14
    variant                        shift and go to state 16

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .
    (2) statements -> statements . statement
    (4) statement -> . empty NEWLINE
    (5) statement -> . declaration NEWLINE
    (6) statement -> . assignment NEWLINE
    (7) statement -> . convert NEWLINE
    (8) statement -> . digitize NEWLINE
    (9) statement -> . while NEWLINE
    (10) statement -> . until NEWLINE
    (11) statement -> . if NEWLINE
    (12) statement -> . command NEWLINE
    (13) statement -> . function NEWLINE
    (14) statement -> . function_call NEWLINE
    (15) empty -> .
    (16) declaration -> . VARIANT variant
    (17) declaration -> . VARIANT variant ASSIGNMENT initialization
    (114) declaration -> . VARIANT error
    (115) declaration -> . VARIANT variant ASSIGNMENT error
    (116) declaration -> . declaration error
    (72) assignment -> . variant ASSIGNMENT expression
    (122) assignment -> . variant ASSIGNMENT error
    (123) assignment -> . error ASSIGNMENT expression
    (73) convert -> . CONVERT type TO type variant
    (124) convert -> . CONVERT type TO type error
    (125) convert -> . CONVERT type TO error
    (126) convert -> . CONVERT type error
    (127) convert -> . CONVERT error
    (128) convert -> . convert error
    (74) digitize -> . DIGITIZE type variant
    (129) digitize -> . DIGITIZE error
    (130) digitize -> . digitize error
    (78) while -> . WHILE bool_expression NEWLINE statements ENDW
    (79) while -> . WHILE bool_expression NEWLINE func_body_statements ENDW
    (133) while -> . WHILE error NEWLINE statements ENDW
    (134) while -> . WHILE bool_expression NEWLINE statements error
    (135) while -> . WHILE bool_expression statements ENDW
    (136) while -> . WHILE error NEWLINE func_body_statements ENDW
    (137) while -> . WHILE bool_expression NEWLINE func_body_statements error
    (138) while -> . WHILE bool_expression func_body_statements ENDW
    (139) while -> . while error
    (80) until -> . UNTIL bool_expression NEWLINE statements ENDU
    (81) until -> . UNTIL bool_expression NEWLINE func_body_statements ENDU
    (140) until -> . UNTIL error NEWLINE statements ENDU
    (141) until -> . UNTIL bool_expression NEWLINE statements error
    (142) until -> . UNTIL bool_expression statements ENDU
    (143) until -> . UNTIL error NEWLINE func_body_statements ENDU
    (144) until -> . UNTIL bool_expression NEWLINE func_body_statements error
    (145) until -> . UNTIL bool_expression func_body_statements ENDU
    (146) until -> . until error
    (82) if -> . IFLESS decimal_expression COMMA decimal_expression NEWLINE statements ENDIF
    (83) if -> . IFNLESS decimal_expression COMMA decimal_expression NEWLINE statements ENDIF
    (84) if -> . IFZERO decimal_expression NEWLINE statements ENDIF
    (85) if -> . IFNZERO decimal_expression NEWLINE statements ENDIF
    (86) if -> . IFHIGH decimal_expression COMMA decimal_expression NEWLINE statements ENDIF
    (87) if -> . IFNHIGH decimal_expression COMMA decimal_expression NEWLINE statements ENDIF
    (88) if -> . IFEQUAL string_expression COMMA string_expression NEWLINE statements ENDIF
    (89) if -> . IFLESS decimal_expression COMMA decimal_expression NEWLINE func_body_statements ENDIF
    (90) if -> . IFNLESS decimal_expression COMMA decimal_expression NEWLINE func_body_statements ENDIF
    (91) if -> . IFZERO decimal_expression NEWLINE func_body_statements ENDIF
    (92) if -> . IFNZERO decimal_expression NEWLINE func_body_statements ENDIF
    (93) if -> . IFHIGH decimal_expression COMMA decimal_expression NEWLINE func_body_statements ENDIF
    (94) if -> . IFNHIGH decimal_expression COMMA decimal_expression NEWLINE func_body_statements ENDIF
    (95) if -> . IFEQUAL string_expression COMMA string_expression NEWLINE func_body_statements ENDIF
    (147) if -> . IFLESS error NEWLINE statements ENDIF
    (148) if -> . IFNLESS error NEWLINE statements ENDIF
    (149) if -> . IFZERO error NEWLINE statements ENDIF
    (150) if -> . IFNZERO error NEWLINE statements ENDIF
    (151) if -> . IFHIGH error NEWLINE statements ENDIF
    (152) if -> . IFNHIGH error NEWLINE statements ENDIF
    (153) if -> . IFEQUAL error NEWLINE statements ENDIF
    (154) if -> . IFLESS decimal_expression COMMA decimal_expression NEWLINE statements error
    (155) if -> . IFNLESS decimal_expression COMMA decimal_expression NEWLINE statements error
    (156) if -> . IFZERO decimal_expression NEWLINE statements error
    (157) if -> . IFNZERO decimal_expression NEWLINE statements error
    (158) if -> . IFHIGH decimal_expression COMMA decimal_expression NEWLINE statements error
    (159) if -> . IFNHIGH decimal_expression COMMA decimal_expression NEWLINE statements error
    (160) if -> . IFEQUAL string_expression COMMA string_expression NEWLINE statements error
    (161) if -> . IFLESS decimal_expression COMMA decimal_expression statements ENDIF
    (162) if -> . IFNLESS decimal_expression COMMA decimal_expression statements ENDIF
    (163) if -> . IFZERO decimal_expression statements ENDIF
    (164) if -> . IFNZERO decimal_expression statements ENDIF
    (165) if -> . IFHIGH decimal_expression COMMA decimal_expression statements ENDIF
    (166) if -> . IFNHIGH decimal_expression COMMA decimal_expression statements ENDIF
    (167) if -> . IFEQUAL string_expression COMMA string_expression statements ENDIF
    (168) if -> . if error
    (96) command -> . COMMAND string_expression
    (131) command -> . COMMAND error
    (132) command -> . command error
    (110) function -> . FUNC NAME NEWLINE func_body_statements ENDFUNC
    (169) function -> . FUNC error NEWLINE func_body_statements ENDFUNC
    (170) function -> . FUNC NAME NEWLINE func_body_statements error
    (171) function -> . FUNC error NEWLINE func_body_statements error
    (172) function -> . function error
    (111) function_call -> . CALL NAME expression
    (112) function_call -> . CALL NAME
    (18) variant -> . NAME
    (19) variant -> . NAME varsize
    (20) variant -> . PARAM
    (21) variant -> . PARAM varsize

    $end            reduce using rule 1 (program -> statements .)
    NEWLINE         reduce using rule 15 (empty -> .)
    VARIANT         shift and go to state 15
    error           shift and go to state 17
    CONVERT         shift and go to state 18
    DIGITIZE        shift and go to state 19
    WHILE           shift and go to state 20
    UNTIL           shift and go to state 21
    IFLESS          shift and go to state 22
    IFNLESS         shift and go to state 23
    IFZERO          shift and go to state 24
    IFNZERO         shift and go to state 25
    IFHIGH          shift and go to state 26
    IFNHIGH         shift and go to state 27
    IFEQUAL         shift and go to state 28
    COMMAND         shift and go to state 29
    FUNC            shift and go to state 30
    CALL            shift and go to state 32
    NAME            shift and go to state 31
    PARAM           shift and go to state 33

    statement                      shift and go to state 34
    empty                          shift and go to state 4
    declaration                    shift and go to state 5
    assignment                     shift and go to state 6
    convert                        shift and go to state 7
    digitize                       shift and go to state 8
    while                          shift and go to state 9
    until                          shift and go to state 10
    if                             shift and go to state 11
    command                        shift and go to state 12
    function                       shift and go to state 13
    function_call                  shift and go to state 14
    variant                        shift and go to state 16

state 3

    (3) statements -> statement .

    VARIANT         reduce using rule 3 (statements -> statement .)
    error           reduce using rule 3 (statements -> statement .)
    CONVERT         reduce using rule 3 (statements -> statement .)
    DIGITIZE        reduce using rule 3 (statements -> statement .)
    WHILE           reduce using rule 3 (statements -> statement .)
    UNTIL           reduce using rule 3 (statements -> statement .)
    IFLESS          reduce using rule 3 (statements -> statement .)
    IFNLESS         reduce using rule 3 (statements -> statement .)
    IFZERO          reduce using rule 3 (statements -> statement .)
    IFNZERO         reduce using rule 3 (statements -> statement .)
    IFHIGH          reduce using rule 3 (statements -> statement .)
    IFNHIGH         reduce using rule 3 (statements -> statement .)
    IFEQUAL         reduce using rule 3 (statements -> statement .)
    COMMAND         reduce using rule 3 (statements -> statement .)
    FUNC            reduce using rule 3 (statements -> statement .)
    CALL            reduce using rule 3 (statements -> statement .)
    NAME            reduce using rule 3 (statements -> statement .)
    PARAM           reduce using rule 3 (statements -> statement .)
    NEWLINE         reduce using rule 3 (statements -> statement .)
    $end            reduce using rule 3 (statements -> statement .)
    ENDW            reduce using rule 3 (statements -> statement .)
    ENDU            reduce using rule 3 (statements -> statement .)
    ENDIF           reduce using rule 3 (statements -> statement .)


state 4

    (4) statement -> empty . NEWLINE

    NEWLINE         shift and go to state 35


state 5

    (5) statement -> declaration . NEWLINE
    (116) declaration -> declaration . error

    NEWLINE         shift and go to state 36
    error           shift and go to state 37


state 6

    (6) statement -> assignment . NEWLINE

    NEWLINE         shift and go to state 38


state 7

    (7) statement -> convert . NEWLINE
    (128) convert -> convert . error

    NEWLINE         shift and go to state 39
    error           shift and go to state 40


state 8

    (8) statement -> digitize . NEWLINE
    (130) digitize -> digitize . error

    NEWLINE         shift and go to state 41
    error           shift and go to state 42


state 9

    (9) statement -> while . NEWLINE
    (139) while -> while . error

    NEWLINE         shift and go to state 43
    error           shift and go to state 44


state 10

    (10) statement -> until . NEWLINE
    (146) until -> until . error

    NEWLINE         shift and go to state 45
    error           shift and go to state 46


state 11

    (11) statement -> if . NEWLINE
    (168) if -> if . error

    NEWLINE         shift and go to state 47
    error           shift and go to state 48


state 12

    (12) statement -> command . NEWLINE
    (132) command -> command . error

    NEWLINE         shift and go to state 49
    error           shift and go to state 50


state 13

    (13) statement -> function . NEWLINE
    (172) function -> function . error

    NEWLINE         shift and go to state 51
    error           shift and go to state 52


state 14

    (14) statement -> function_call . NEWLINE

    NEWLINE         shift and go to state 53


state 15

    (16) declaration -> VARIANT . variant
    (17) declaration -> VARIANT . variant ASSIGNMENT initialization
    (114) declaration -> VARIANT . error
    (115) declaration -> VARIANT . variant ASSIGNMENT error
    (18) variant -> . NAME
    (19) variant -> . NAME varsize
    (20) variant -> . PARAM
    (21) variant -> . PARAM varsize

    error           shift and go to state 55
    NAME            shift and go to state 31
    PARAM           shift and go to state 33

    variant                        shift and go to state 54

state 16

    (72) assignment -> variant . ASSIGNMENT expression
    (122) assignment -> variant . ASSIGNMENT error

    ASSIGNMENT      shift and go to state 56


state 17

    (123) assignment -> error . ASSIGNMENT expression

    ASSIGNMENT      shift and go to state 57


state 18

    (73) convert -> CONVERT . type TO type variant
    (124) convert -> CONVERT . type TO type error
    (125) convert -> CONVERT . type TO error
    (126) convert -> CONVERT . type error
    (127) convert -> CONVERT . error
    (75) type -> . BOOL
    (76) type -> . DIGIT
    (77) type -> . STRING

    error           shift and go to state 59
    BOOL            shift and go to state 60
    DIGIT           shift and go to state 61
    STRING          shift and go to state 62

    type                           shift and go to state 58

state 19

    (74) digitize -> DIGITIZE . type variant
    (129) digitize -> DIGITIZE . error
    (75) type -> . BOOL
    (76) type -> . DIGIT
    (77) type -> . STRING

    error           shift and go to state 64
    BOOL            shift and go to state 60
    DIGIT           shift and go to state 61
    STRING          shift and go to state 62

    type                           shift and go to state 63

state 20

    (78) while -> WHILE . bool_expression NEWLINE statements ENDW
    (79) while -> WHILE . bool_expression NEWLINE func_body_statements ENDW
    (133) while -> WHILE . error NEWLINE statements ENDW
    (134) while -> WHILE . bool_expression NEWLINE statements error
    (135) while -> WHILE . bool_expression statements ENDW
    (136) while -> WHILE . error NEWLINE func_body_statements ENDW
    (137) while -> WHILE . bool_expression NEWLINE func_body_statements error
    (138) while -> WHILE . bool_expression func_body_statements ENDW
    (47) bool_expression -> . bool_math_expression
    (48) bool_expression -> . bool_const
    (49) bool_expression -> . variant
    (50) bool_expression -> . function_call
    (61) bool_math_expression -> . bool_expression PLUS bool_expression
    (62) bool_math_expression -> . MINUS bool_expression
    (69) bool_const -> . TRUE
    (70) bool_const -> . FALSE
    (18) variant -> . NAME
    (19) variant -> . NAME varsize
    (20) variant -> . PARAM
    (21) variant -> . PARAM varsize
    (111) function_call -> . CALL NAME expression
    (112) function_call -> . CALL NAME

    error           shift and go to state 66
    MINUS           shift and go to state 71
    TRUE            shift and go to state 72
    FALSE           shift and go to state 73
    NAME            shift and go to state 31
    PARAM           shift and go to state 33
    CALL            shift and go to state 32
